--- a/src/input/css/blocks/icon.css
+++ b/src/input/css/blocks/icon.css
@@ -1,5 +1,6 @@
-[data-icon],
-.icon {
+[data-icon]:not([data-icon="false"]),
+.icon,
+.inline-icon {
 	height: 1em;
 	pointer-events: none;
 	width: 1em;
@@ -7,11 +8,8 @@
 
 .inline-icon {
 	display: inline-block;
-	height: 1em;
 	margin: 0 0.05em 0 0.1em;
-	pointer-events: none;
 	vertical-align: -0.15em;
-	width: 1em;
 }
 
 :is(.icon, .inline-icon) > path {
