--- a/src/_includes/backlinks.njk
+++ b/src/_includes/backlinks.njk
@@ -2,7 +2,7 @@
 {%- set backlinksCount = backlinks | length -%}
 {%- if backlinksCount > 0 -%}
 	<nav aria-labelledby="backlinks" class="[ flow content-width ]" data-pagefind-ignore>
-		<details>
+		<details class="[ details-reset ]">
 			<summary class="[ h2 ]"><h2 id="backlinks">{{ backlinksCount }} Backlinks</h2></summary>
 			<ul>
 				{%- for otherPost in backlinks -%}
