--- a/src/input/content/pages/garden.njk
+++ b/src/input/content/pages/garden.njk
@@ -16,10 +16,56 @@ eleventyImport:
 	<p>You can also find a list of all the <a href="/tags/" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "fas:tags" %} <span>tags</span></a>.</p>
 </div>
 
-<h2 class="[ visually-hidden ]" hidden>Graph</h2>
-<div id="graph"></div>
+<h2 id="title-graph" tabindex="-1">Graph</h2>
+<is-land data-for="graph" on:interaction="">
+	<template data-island>
+		{%- rollup "src/input/js/graph.js" | url -%}
+		<script type="module">
+			if (!CSS.supports("selector(:has(a))")) {
+				document.querySelector("#graph + picture").setAttribute("hidden", "");
+			}
+		</script>
+	</template>
+	<div id="graph"></div>
+	<div data-preload>
+		<picture>
+			<source media="(prefers-color-scheme: dark)" srcset="/assets/img/graph-dark.webp">
+			<source media="(prefers-color-scheme: light)" srcset="/assets/img/graph-light.webp">
+			<img eleventy:ignore alt="" class="[ u-photo ][ image ]" src="/assets/img/graph-light.webp" width="640" height="400">
+		</picture>
+		<button type="button" class="[ button-reset ]" onclick="window['title-graph'].focus()">
+			<span>
+				{% inlineIcon "fas:hexagon-nodes" %}
+				Show force-directed pages and links graph
+			</span>
+		</button>
+	</div>
+</is-land>
+<dialog id="graph-dialog" closedby="any" aria-labelledby="graph-dialog-title" aria-describedby="graph-dialog-body">
+	<div class="[ container ][ flow ]">
+		<form method="dialog">
+			<button type="submit" autofocus>
+				<span class="[ visually-hidden ]">Close</span>
+				{%- icon "fas:xmark" -%}
+			</button>
+		</form>
+		<h2 id="graph-dialog-title" style="--flow-space: 0"></h2>
+		<div id="graph-dialog-body" class="[ flow ]">
+			<details open class="[ incoming-links ][ details-reset ]">
+				<summary class="[ h3 ]">
+					<h3>Incoming links</h3>
+				</summary>
+			</details>
+			<details open class="[ outgoing-links ][ details-reset ]">
+				<summary class="[ h3 ]">
+					<h3>Outgoing links</h3>
+				</summary>
+			</details>
+		</div>
+	</div>
+</dialog>
 
-<h2 class="[ visually-hidden ]" hidden>Filters</h2>
+<h2 hidden>Filters</h2>
 <form class="[ garden-filters ][ flow ]" hidden>
 	<fieldset>
 		<legend>Stages</legend>
@@ -78,10 +124,12 @@ eleventyImport:
 </form>
 
 {%- include "crazy-filter.njk" -%}
+<h2>Posts</h2>
 {%- set posts = collections.postsSortedByDate -%}
 <ul id="feed" tabindex="-1" class="[ feed ]" style="--flow-space: var(--size-7)">
 	{%- for post in posts %}
 		{%- if post.data.archived !== true -%}
+			{%- set headingLevel = 3 -%}
 			{%- set title = post.data.title -%}
 			{%- set url = post.url -%}
 			{%- setAsync "imageMarkup" -%}{%- endsetAsync -%}
