--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -93,30 +93,34 @@ eleventyImport:
 
 	{%- include "crazy-filter.njk" -%}
 
-	{%- feedBlock title = "Recent posts" -%}
-	{%- set recentPosts = collections.postsSortedByDate | limit(10) -%}
-	{%- for post in recentPosts -%}
-		{%- set headingLevel = 3 -%}
-		{%- set title = post.data.title -%}
-		{%- set url = post.url -%}
-		{%- setAsync "imageMarkup" -%}{%- endsetAsync -%}
-		{%- if post.data.image -%}
-			{%- setAsync "imageMarkup" -%}
-			<svg viewBox="0 0 200 150" width="200" height="150">
-				{%- set randomNumber -%}{%- random 0, 1 -%}{%- endset -%}
-				<image class="image" xlink:href="https://res.cloudinary.com/ellyloel/image/fetch/f_auto/q_auto:low/c_fill,h_150,w_200/{{ post.data.image }}" x="-50%" y="-50%" width="200%" height="200%" filter="url(#filter)" opacity="0.65" style="transform: rotate({{ randomNumber | round(3) }}turn); transform-origin: center;"></image>
-			</svg>
-			{%- endsetAsync -%}
-		{%- endif -%}
-		{%- set date = post.date -%}
-		{%- set label = "" -%}
-		{%- if post.data.modified -%}
-			{%- set label = "Last modified" -%}
-		{%- elif post.data.created -%}
-			{%- set label = "Created" -%}
-		{%- endif -%}
-		{%- set tags = post.data.tags -%}
-		{%- include "feedItem.njk" -%}
-	{%- endfor -%}
-	{%- endfeedBlock -%}
+
+	<section class="[ recent-posts ] [ h-feed ] [ feed-block flow ]">
+		<h2 class="[ p-name ]">Recent posts</h2>
+		<ul class="[ feed ]">
+		{%- set recentPosts = collections.postsSortedByDate | limit(10) -%}
+		{%- for post in recentPosts -%}
+			{%- set headingLevel = 3 -%}
+			{%- set title = post.data.title -%}
+			{%- set url = post.url -%}
+			{%- setAsync "imageMarkup" -%}{%- endsetAsync -%}
+			{%- if post.data.image -%}
+				{%- setAsync "imageMarkup" -%}
+				<svg viewBox="0 0 200 150" width="200" height="150">
+					{%- set randomNumber -%}{%- random 0, 1 -%}{%- endset -%}
+					<image class="image" xlink:href="https://res.cloudinary.com/ellyloel/image/fetch/f_auto/q_auto:low/c_fill,h_150,w_200/{{ post.data.image }}" x="-50%" y="-50%" width="200%" height="200%" filter="url(#filter)" opacity="0.65" style="transform: rotate({{ randomNumber | round(3) }}turn); transform-origin: center;"></image>
+				</svg>
+				{%- endsetAsync -%}
+			{%- endif -%}
+			{%- set date = post.date -%}
+			{%- set label = "" -%}
+			{%- if post.data.modified -%}
+				{%- set label = "Last modified" -%}
+			{%- elif post.data.created -%}
+				{%- set label = "Created" -%}
+			{%- endif -%}
+			{%- set tags = post.data.tags -%}
+			{%- include "feedItem.njk" -%}
+		{%- endfor -%}
+		</ul>
+	</section>
 </div>
