--- a/src/input/css/blocks/button.css
+++ b/src/input/css/blocks/button.css
@@ -1,15 +1,17 @@
+.button-reset {
+	appearance: none;
+	background: none;
+	border: none;
+	font: inherit;
+	padding: unset;
+}
+
 :where(
-		.button,
-		button,
-		button[type],
-		input[type="button"],
-		input[type="submit"],
-		input[type="reset"]
-	),
-:where(input[type="file"])::-webkit-file-upload-button,
-:where(input[type="file"])::file-selector-button {
+	.button,
+	button:not(.button-reset)
+) {
 	--_accent: initial;
-	--_text: initial;
+	--_text: var(--_accent, var(--link));
 	--_size: initial;
 	--_bg: var(--neutral-base);
 	--_border: currentcolor;
@@ -36,102 +38,32 @@
 	text-align: center;
 	-webkit-touch-callout: none;
 
-	/* TODO: Currently this breaks the focus-visible outline transition */
-	transition: border-color 0.5s var(--ease-3) 3s, box-shadow 145ms var(--ease-4);
-	user-select: none;
-}
+	@media (prefers-reduced-motion: no-preference) {
+		transition: border-color 0.5s var(--ease-3), box-shadow 145ms var(--ease-4);
 
-:where(
-		.button,
-		button,
-		button[type],
-		input[type="button"],
-		input[type="submit"],
-		input[type="reset"]
-	)[disabled] {
-	--_bg: none;
-	--_text: var(--gray-6);
+		&:focus-visible {
+			transition: outline-offset 145ms var(--ease-2), border-color 0.5s var(--ease-3), box-shadow 145ms var(--ease-4);
+		}
 
-	box-shadow: var(--shadow-1);
-	cursor: not-allowed;
-
-	@media (prefers-color-scheme: dark) {
-		--_text: var(--gray-5);
+		&:not(:active):focus-visible {
+			transition: outline-offset 0.25s var(--ease-2), border-color 0.5s var(--ease-3), box-shadow 145ms var(--ease-4);
+		}
 	}
-}
 
-:where(
-		.button,
-		button,
-		button[type],
-		input[type="button"],
-		input[type="submit"],
-		input[type="reset"]
-	) {
-	&:where(:not(:active):hover) {
+	&:not(:active):hover {
 		--_highlight-size: var(--size-2);
 
-		transition-delay: 0s;
 		transition-duration: 0.25s;
 	}
 
-	& > :where(svg) {
+	& > svg:not([data-icon="false"]) {
 		block-size: var(--_icon-size);
 		flex-shrink: 0;
 		inline-size: var(--_icon-size);
 
-		& > :where(*) {
+		& > * {
 			stroke: var(--_icon-color);
 			stroke-width: var(--border-size-2);
 		}
-	}
-}
-
-:where([type="submit"], form button:not([type], [disabled])) {
-	--_text: var(--_accent, var(--link));
-}
-
-:where([type="reset"]) {
-	--_text: var(--red-6);
-	--_border: var(--red-3);
-
-	&:focus-visible {
-		outline-color: var(--red-6);
-	}
-
-	@media (prefers-color-scheme: dark) {
-		--_text: var(--red-2);
-		--_border: var(--neutral-bg);
-	}
-}
-
-:where([type="submit"], [type="reset"], form button:not([type])):is(
-		:hover,
-		:focus-visible
-	):not([disabled]) {
-	--_border: currentcolor;
-}
-
-:where(input[type="file"]) {
-	align-self: flex-start;
-	border: var(--border-size-1) solid var(--surface-2);
-	border-radius: var(--radius-2);
-	box-shadow: var(--inner-shadow-4);
-	color: var(--text-2);
-	cursor: auto;
-	max-inline-size: 100%;
-	padding: 0;
-
-	&::file-selector-button {
-		margin-inline-end: 1.75ch;
-	}
-}
-
-@media (prefers-color-scheme: dark) {
-	:where([disabled]),
-	:where([type="reset"]),
-	:where([type="submit"]),
-	:where(form button:not([type="button"])) {
-		--_bg: var(--neutral-bg-subtle);
 	}
 }
