--- a/src/input/css/blocks/graph.css
+++ b/src/input/css/blocks/graph.css
@@ -1,9 +1,40 @@
-#graph {
-	block-size: fit-content;
-	inline-size: fit-content;
-	position: relative;
+is-land[data-for="graph"] {
+	& [data-preload] {
+		display: grid;
+		grid-template-rows: minmax(0, 1fr);
+		max-block-size: 95svb;
 
-	& > svg {
+		> * {
+			grid-column: 1 / 1;
+			grid-row: 1 / 1;
+		}
+
+		> picture {
+			overflow: clip;
+	
+			> img {
+				block-size: 100%;
+				inline-size: 100%;
+				object-fit: cover;
+			}
+		}
+
+		> button {
+			border-radius: var(--radius-3);
+			outline-offset: -2px;
+			padding: var(--size-2) var(--size-1);
+	
+			> span {
+				background: var(--accent-bg-subtle);
+				border-radius: var(--radius-2);
+				box-decoration-break: clone;
+				padding: var(--size-1);
+			}
+		}
+	}
+
+	> [id="graph"] > svg,
+	> [data-preload] picture {
 		--shadow-offset: var(--size-1);
 
 		background: var(--accent-bg-subtle);
@@ -13,15 +44,70 @@
 			var(--accent-bg-hover);
 		transition: box-shadow 300ms var(--ease-1);
 
-		&:is(:hover, :focus-within) {
+		&:has(+ button:is(:hover, :focus-visible)) {
 			--shadow-offset: var(--size-2);
 
 			transition: box-shadow 150ms var(--ease-1);
 		}
 	}
+
+	> [id="graph"]:has(svg) + [data-preload] {
+		display: none;
+	}
 }
 
-a[href="#skip-graph"] {
+#graph {
+	block-size: fit-content;
+	inline-size: 100%;
+	position: relative;
+
+	> svg {
+		inline-size: 100%;
+		max-block-size: 95svb;
+		max-inline-size: 100%;
+
+		& * {
+			overflow: visible;
+		}
+
+		& button {
+			cursor: grab;
+			outline: none;
+			pointer-events: none;
+			
+			&:active {
+				cursor: grabbing;
+			}
+
+			& path {
+				pointer-events: auto;
+			}
+
+			&:focus-visible path {
+				stroke-dasharray: 3 1;
+				stroke-width: 1px;
+			}
+		}
+	}
+}
+
+a[id="before-graph"][href="#after-graph"] {
+	top: -1em;
+	top: -1lh;
+
+	&:focus-visible {
+		transform: translateY(calc(-1 * var(--size-2)));
+	}
+}
+
+a[id="after-graph"][href="#before-graph"] {
+	&:focus-visible {
+		transform: translateY(var(--size-2));
+	}
+}
+
+/* stylelint-disable-next-line no-descending-specificity */
+a[id="before-graph"][href="#after-graph"], a[id="after-graph"][href="#before-graph"] {
 	--opacity-duration: 100ms;
 	--transform-duration: 250ms;
 
@@ -32,7 +118,6 @@ a[href="#skip-graph"] {
 	pointer-events: none;
 	position: absolute;
 	right: 0;
-	transform: translateX(0%) translateY(-50%);
 	transition: opacity var(--opacity-duration) var(--ease-1) !important;
 
 	@media (prefers-reduced-motion: no-preference) {
@@ -43,12 +128,10 @@ a[href="#skip-graph"] {
 	&:focus-visible {
 		opacity: 1;
 		pointer-events: all;
-		transform: translateY(calc(-100% - var(--size-2)));
 		transition: opacity var(--opacity-duration) var(--ease-1) !important;
 
 		@media (prefers-reduced-motion: no-preference) {
-			transition: opacity var(--opacity-duration) var(--ease-1)
-					calc(var(--transform-duration) - var(--opacity-duration)),
+			transition: opacity var(--opacity-duration) var(--ease-1) calc(var(--transform-duration) - var(--opacity-duration)),
 				transform var(--transform-duration) var(--ease-in-3),
 				outline-offset 145ms var(--ease-2) !important;
 		}
