--- a/src/input/css/blocks/settings.css
+++ b/src/input/css/blocks/settings.css
@@ -1,74 +1,47 @@
 .settings-dialog {
-	align-content: start;
-	border-radius: var(--radius-3);
-	box-shadow: var(--shadow-6);
-	color: var(--text-1);
-	inline-size: 100%;
-	inset: 0;
-	margin: auto;
-	max-inline-size: min(90vi, var(--size-content-2));
-	overflow: hidden;
-	padding: 0;
-	position: fixed;
-	transition-behavior: allow-discrete;
-	transition-duration: 500ms;
-	transition-property: opacity, display, overlay, scale;
-	transition-timing-function: var(--ease-3);
-
 	&:modal {
 		display: grid;
-		opacity: 1;
 	}
 
-	&:not(:modal) {
-		display: none;
-		opacity: 0;
-	}
+	> .container {
+		grid-column: 1/2;
 
-	@media (prefers-reduced-motion: no-preference) {
-		&:modal {
-			scale: 100%;
+		& form[method="dialog"] {
+			float: none;
 		}
 
-		&:not(:modal) {
-			scale: 80%;
-		}
-	}
+		& button {
+			&[type="submit"] {
+				float: inline-end;
+			}
 
-	@starting-style {
-		&:modal {
-			opacity: 0;
+			&[aria-pressed="true"] {
+				background: var(--accent-solid);
+				color: var(--accent-2);
+			}
 
-			@media (prefers-reduced-motion: no-preference) {
-				scale: 80%;
+			&[aria-pressed="false"] {
+				background: var(--accent-bg-subtle);
+				color: var(--accent-solid);
+			}
+
+			&:not([data-color-scheme], [type="submit"]) {
+				inline-size: 100%;
+			}
+
+			&[data-color-scheme] {
+				flex: auto;
+			}
+
+			&[data-color-scheme="auto"] {
+				flex: 100%;
 			}
 		}
+
+		& channel-slider::part(slider) {
+			--_slider-thumb-radius: 9999px;
+
+			border-radius: 9999px;
+		}
 	}
-}
-
-.settings-dialog .container {
-	grid-column: 1/2;
-	padding: var(--size-7);
-
-	& button[data-action="close"] {
-		position: absolute;
-		right: var(--size-7);
-		top: var(--size-7);
-	}
-
-	& button[aria-pressed="true"] {
-		background: var(--accent-solid);
-		color: var(--accent-2);
-	}
-
-	& button[aria-pressed="false"] {
-		background: var(--accent-bg-subtle);
-		color: var(--accent-solid);
-	}
-}
-
-channel-slider::part(slider) {
-	--_slider-thumb-radius: 9999px;
-
-	border-radius: 9999px;
 }
