--- a/src/input/css/style.css
+++ b/src/input/css/style.css
@@ -40,6 +40,7 @@
 @import url("./blocks/chronological.css") layer(blocks);
 @import url("./blocks/content-footer.css") layer(blocks);
 @import url("./blocks/date.css") layer(blocks);
+@import url("./blocks/dialog.css") layer(blocks);
 @import url("./blocks/eight-ball.css") layer(blocks);
 @import url("./blocks/emoji.css") layer(blocks);
 @import url("./blocks/feed-block.css") layer(blocks);
