--- a/src/input/css/blocks/lego.css
+++ b/src/input/css/blocks/lego.css
@@ -33,6 +33,6 @@
 
 model-viewer:focus-within {
 	border-radius: var(--radius-blob-4);
-	outline: 2px solid var(--link);
+	outline: 2px auto var(--link);
 	outline-offset: 0;
 }
